--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,9 @@
-# Flask Core
 FLASK_SECRET_KEY='a_very_strong_and_random_secret_key_for_flask'
-FLASK_DEBUG=True # Set to False in production
-
-# JWT Authentication
+FLASK_DEBUG=True
 JWT_SECRET_KEY='a_different_strong_random_secret_key_for_jwt'
-JWT_ACCESS_TOKEN_EXPIRES_HOURS=1 # Token lifespan in hours
-
-# Admin Credentials for API login
+JWT_ACCESS_TOKEN_EXPIRES_HOURS=1
 ADMIN_USERNAME='admin'
 ADMIN_PASSWORD='your_secure_password'
-
-# Third-Party API Keys
 GOOGLE_API_KEY='your_google_api_key'
 DEEPSEEK_API_KEY='your_deepseek_api_key'
-
-# CORS Origins (comma-separated, no spaces)
 CORS_ORIGINS='http://localhost:3000,http://127.0.0.1:5000'
