--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 FLASK_SECRET_KEY='a_very_strong_and_random_secret_key_for_flask'
-FLASK_DEBUG=True
+FLASK_DEBUG=False
 JWT_SECRET_KEY='a_different_strong_random_secret_key_for_jwt'
 JWT_ACCESS_TOKEN_EXPIRES_HOURS=1
 ADMIN_USERNAME='admin'
