--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     ports:
       - "5000:5000"
     environment:
+      - RATELIMIT_STORAGE_URI=memcached://memcached:11211
       - FLASK_ENV=production
       - PYTHONUNBUFFERED=1
     env_file:
@@ -16,12 +17,19 @@ services:
     volumes:
       - ./logs:/app/logs
     restart: unless-stopped
+    depends_on: # Add this to ensure memcached starts first
+      - memcached
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 40s
+
+  memcached:
+    image: memcached:1.6-alpine
+    container_name: qb-autogen-memcached
+    restart: unless-stopped
 
 volumes:
   logs:
