--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,13 @@
-FLASK_SECRET_KEY='a_very_strong_and_random_secret_key_for_flask'
-FLASK_DEBUG=False
-JWT_SECRET_KEY='a_different_strong_random_secret_key_for_jwt'
-JWT_ACCESS_TOKEN_EXPIRES_HOURS=1
-ADMIN_USERNAME='admin'
-ADMIN_PASSWORD='your_secure_password'
-GOOGLE_API_KEY='your_google_api_key'
-DEEPSEEK_API_KEY='your_deepseek_api_key'
-CORS_ORIGINS='http://localhost:3000,http://127.0.0.1:5000'
+FLASK_SECRET_KEY="your_strong_random_32_byte_secret_key"
+FLASK_DEBUG="True"
+JWT_SECRET_KEY="your_other_strong_random_jwt_secret"
+JWT_ACCESS_TOKEN_EXPIRES_HOURS="24"
+ADMIN_USERNAME="admin_user"
+ADMIN_PASSWORD="your_secure_admin_password"
+GOOGLE_API_KEY="your_google_ai_studio_api_key_here"
+DEEPSEEK_API_KEY="your_deepseek_api_key_here"
+OPENAI_API_KEY="your_openai_api_key_here"
+GEMINI_MODEL_NAME="gemini-1.5-pro-latest"
+DEEPSEEK_MODEL_NAME="deepseek-chat"
+OPENAI_MODEL_NAME="gpt-4o"
+CORS_ORIGINS="http://localhost:3000"
