--- a/.dockerignore
+++ b/.dockerignore
@@ -2,64 +2,24 @@
 .git
 .gitignore
 
+# Docker
+Dockerfile
+docker-compose.yml
+.dockerignore
+
 # Python
-__pycache__
+__pycache__/
 *.pyc
 *.pyo
 *.pyd
-.Python
-env
-pip-log.txt
-pip-delete-this-directory.txt
-.tox
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.log
-.git
-.mypy_cache
-.pytest_cache
-.hypothesis
-
-# Virtual environments
-.env
-.venv
-env/
+.venv/
 venv/
-ENV/
-env.bak/
-venv.bak/
+env/
+*.egg-info/
 
-# IDEs
-.vscode/
+# IDE files
 .idea/
-*.swp
-*.swo
-*~
+.vscode/
 
-# OS
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Docker
-Dockerfile*
-docker-compose*
-.dockerignore
-
-# Documentation
-README.md
-*.md
-
-# Logs (will be mounted as volume)
+# Local logs
 logs/
-
-# SSL certificates (if any)
-ssl/
