--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ ADMIN_PASSWORD="your_secure_admin_password"
 GOOGLE_API_KEY="your_google_ai_studio_api_key_here"
 DEEPSEEK_API_KEY="your_deepseek_api_key_here"
 OPENAI_API_KEY="your_openai_api_key_here"
-GEMINI_MODEL_NAME="gemini-1.5-pro-latest"
+GEMINI_MODEL_NAME="gemini-2.5-flash"
 DEEPSEEK_MODEL_NAME="deepseek-chat"
 OPENAI_MODEL_NAME="gpt-4o"
 CORS_ORIGINS="http://localhost:3000"
